# censor-engine

./: .gitignore  README.md  format.sh  gen_dummy_data.sh  get_example_files.py  gfgd.py  lint.sh  main.py  mypy.ini  pyproject.toml  ruff.toml  run.bat  run.sh  run_video_test.sh  test.sh  tests.sh
.github/ci_stuff/: get_ffmpeg.py
.github/workflows/: ci.yml
docs/: FIXME  TODO.md  config_settings.md  upgrade.md
docs/.dev/: FIXME  TODO.md  upgrade.md
scripts/: build_all.sh  format.sh  get_example_files.py  get_test_data.sh  lint.sh  run_test_image.sh  run_test_video.sh
src/: dev_tools.py  main.py
src/000_tests/03_configs/: test_core.yml  test_revealed_and_protected.yml  test_reverse_censor.yml
src/censor_engine/: __init__.py  colours.py  constant.py  detected_part.py  paths.py  typing.py
src/censor_engine/api/: effects.py  masks.py  styles.py
src/censor_engine/censor_engine/: __init__.py  base.py  mixin_arguments.py  mixin_model_management.py  mixin_pipeline_image.py  mixin_pipeline_video.py  mixin_reporting.py  mixin_uitls.py  mixin_utils.py
src/censor_engine/detected_part/: __init__.py  base.py
src/censor_engine/libs/: registries.py
src/censor_engine/models/: config.py  detectors.py  enums.py  shapes.py  structs.py  styles.py
src/censor_engine/paths/: __init__.py  base.py  utils.py
src/censorengine/: __init__.py
src/censorengine/backend/: _dev.py
src/censorengine/configs/: .devtest.yml  00_default.yml  01_cooler_default.yml  02_ellipses.yml  03_joint_ellipses.yml  black_bars.yml  blurred_lines.yml  cutouts.yml  only_blur.yml  pixel_paradise.yml  red_tape.yml  state_approved_triggers.yml  trigger_focus.yml  white_bars.yml
src/censorengine/lib_models/: detectors.py  shapes.py  styles.py
tests/: _dev.py  conftest.py  input_image.py  input_video.py  test_baseline.py  test_classes.py  test_misc.py  test_shapes.py  utils.py  utils_video.py
tests/advanced/: test_configs.py  test_overlaps.py  test_states.py
tests/bugs/: test_bar_foot_reveal.py
tests/configs/: test_classes.yml  test_features.yml  test_revealed_and_protected.yml  test_reverse_censor.yml  test_shapes.yml  test_styles.yml
tests/core/: test_core_functions.py
tests/test_data/: test_images.py  utils.py
tests/test_functionality/: test_functionality.py  test_overlaps.py  test_protected.py  test_revealed.py  test_reverse_censor.py
tests/test_styles/: test_blurs.py  test_boxes.py  test_colour_effects.py
(+263 files in other folders)
