[project]
name = "censor-engine"
version = "0.1.1"
description = "Censor Engine, Censors 'stuff'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.8",
    "nudenet>=3.4.2",
    "numpy>=2.3.2",
    "onnxruntime-gpu>=1.22.0",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.1.1",
    "progressbar2>=4.5.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "opencv-stubs>=0.1.0",
    "pyinstaller>=6.19.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "types-pyyaml>=6.0.12.20250516",
]
