[project]
name = "censor-engine"
version = "0.1.1"
description = "Censor Engine, Censors 'stuff'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "numpy>=2.3.2",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.1.1",
    "progressbar2>=4.5.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.2",
    "ultralytics>=8.4.37",
    "yolo>=0.3.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "opencv-stubs>=0.1.0",
    "pyinstaller>=6.19.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]



[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
